Bower font awesome + css modifs

--- a/wp-content/themes/nuitdeboo-child/bower.json
+++ b/wp-content/themes/nuitdeboo-child/bower.json
@@ -31,6 +31,16 @@
         "./assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
         "./assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
       ]
+    },
+    "font-awesome": {
+      "main": [
+        "./fonts/fontawesome-webfont.eot",
+        "./fonts/fontawesome-webfont.svg",
+        "./fonts/fontawesome-webfont.ttf",
+        "./fonts/fontawesome-webfont.woff",
+        "./fonts/fontawesome-webfont.woff2",
+        "./fonts/FontAwesome.otf"
+      ]
     }
   }
 }
