--- a/wp-content/themes/nuitdeboo-child/bower.json
+++ b/wp-content/themes/nuitdeboo-child/bower.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "3.3.6"
+    "bootstrap-sass": "3.3.6",
+    "font-awesome": "^4.6.1"
   },
   "overrides": {
     "bootstrap-sass": {
