--- a/wp-config.php.dist
+++ b/wp-config.php.dist
@@ -28,7 +28,7 @@ define('DB_USER', 'root');
 define('DB_PASSWORD', 'leurfairepeur');
 
 /** Adresse de l'hébergement MySQL. */
-define('DB_HOST', '127.0.0.1');
+define('DB_HOST', 'mysql');
 
 /** Jeu de caractères à utiliser par la base de données lors de la création des tables. */
 define('DB_CHARSET', 'utf8');
