--- a/wp-content/themes/nuitdeboo-child/package.json
+++ b/wp-content/themes/nuitdeboo-child/package.json
@@ -51,6 +51,7 @@
     "imagemin-pngcrush": "^4.1.0",
     "jshint-stylish": "^2.0.1",
     "lazypipe": "^1.0.1",
+    "lodash": "^4.11.1",
     "merge-stream": "^1.0.0",
     "minimist": "^1.1.3",
     "run-sequence": "^1.1.2",
