--- a/wp-content/themes/nuitdeboo-child/composer.json
+++ b/wp-content/themes/nuitdeboo-child/composer.json
@@ -25,6 +25,7 @@
   },
   "require": {
     "php": ">=5.4.0",
-    "composer/installers": "~1.0"
+    "composer/installers": "~1.0",
+    "addwiki/mediawiki-api-base": "~2.1"
   }
 }
