--- a/wp-content/themes/nuitdeboo-child/composer.json
+++ b/wp-content/themes/nuitdeboo-child/composer.json
@@ -25,6 +25,8 @@
   },
   "require": {
     "php": ">=5.4.0",
-    "composer/installers": "~1.0"
+    "composer/installers": "~1.0",
+    "symfony/dom-crawler": "^3.0",
+    "fabpot/goutte": "^3.1"
   }
 }
