Create an ansible provision which install everything
- Modify deploy script.
- add documatation about NFS
- Remove premium plugins.
- Update SQL dump.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .vagrant
-wp-config.php
-wp-content/uploads/
-/wp-content/themes/nuitdeboo-child/assets/styles/common/_fonts.scss
+/theme/assets/styles/common/_fonts.scss
 .DS_Store
+/wordpress
