--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -6,8 +6,17 @@
   - name: Ensure nginx log directory exists
     file: dest=/var/log/nginx/wordpress state=directory
 
+  - name: Create global directory
+    sudo: yes
+    shell: mkdir -p /etc/nginx/global
+
+  - name: Compy wordpress configurations
+    sudo: yes
+    with_items: [multisite.conf, restrictions.conf, wordpress.conf]
+    template: src={{item}} dest=/etc/nginx/global/{{item}}
+    notify: restart nginx
+
   - name: Change default nginx site
     sudo: yes
     template: src=default.tpl dest=/etc/nginx/sites-available/default
     notify: restart nginx
-
