--- a/theme/assets/manifest.json
+++ b/theme/assets/manifest.json
@@ -11,6 +11,26 @@
         "scripts/periscope.js"
       ]
     },
+    "video.js": {
+      "files": [
+        "scripts/video.js"
+      ]
+    },
+    "videojs-ie8.js": {
+      "files": [
+        "scripts/ie8/videojs-ie8.js"
+      ]
+    },
+    "videojs-contrib-hls.js": {
+      "files": [
+        "scripts/videojs-contrib-hls.js"
+      ]
+    },
+    "tvdebout.js": {
+      "files": [
+        "scripts/tvdebout.js"
+      ]
+    },
     "main.css": {
       "files": [
         "styles/main.scss"
