--- a/theme/composer.json
+++ b/theme/composer.json
@@ -28,5 +28,8 @@
     "composer/installers": "~1.0",
     "symfony/dom-crawler": "^3.0",
     "fabpot/goutte": "^3.1"
+  },
+  "autoload": {
+    "psr-4": {"Nuitdebout\\": "."}
   }
 }
