TvDebout (mainpage) : YouTube playlist, auto search stream, auto hide/show and video.js via bower

--- a/theme/bower.json
+++ b/theme/bower.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "bootstrap-sass": "3.3.6",
     "font-awesome": "fontawesome#^4.6.1",
-    "snapwidget": "http://snapwidget.com/js/snapwidget.js"
+    "snapwidget": "http://snapwidget.com/js/snapwidget.js",
+    "video.js": "videojs#^5.10.1"
   },
   "overrides": {
     "bootstrap-sass": {
