--- a/theme/composer.json
+++ b/theme/composer.json
@@ -27,6 +27,7 @@
     "php": ">=5.4.0",
     "composer/installers": "~1.0",
     "symfony/dom-crawler": "^3.0",
-    "fabpot/goutte": "^3.1"
+    "fabpot/goutte": "^3.1",
+    "doctrine/cache": "^1.6"
   }
 }
