--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -58,5 +58,6 @@
         - contact-form-7
         - login-lockdown
         - enhanced-media-library
+        - wp-cas-server
   roles:
     - wordpress
