Add display-posts-shortcode plugin.

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -59,5 +59,6 @@
         - login-lockdown
         - enhanced-media-library
         - youtube-channel
+        - display-posts-shortcode
   roles:
     - wordpress
