--- a/theme/package.json
+++ b/theme/package.json
@@ -36,6 +36,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-consolidate": "^0.2.0",
     "gulp-cssnano": "^2.1.0",
+    "gulp-filter": "^4.0.0",
     "gulp-flatten": "0.1.1",
     "gulp-iconfont": "^6.0.0",
     "gulp-if": "^1.2.5",
@@ -52,6 +53,7 @@
     "jshint-stylish": "^2.0.1",
     "lazypipe": "^1.0.1",
     "lodash": "^4.11.1",
+    "main-bower-files": "^2.13.1",
     "merge-stream": "^1.0.0",
     "minimist": "^1.1.3",
     "run-sequence": "^1.1.2",
