--- a/theme/bower.json
+++ b/theme/bower.json
@@ -20,6 +20,12 @@
         "dist/video.js"
       ]
     },
+    "font-awesome": {
+      "main": [
+        "scss/font-awesome.scss",
+        "fonts/*"
+      ]
+    },
     "bootstrap-sass": {
       "main": [
         "./assets/stylesheets/_bootstrap.scss",
