--- a/theme/bower.json
+++ b/theme/bower.json
@@ -11,7 +11,8 @@
     "font-awesome": "fontawesome#^4.6.1",
     "snapwidget": "http://snapwidget.com/js/snapwidget.js",
     "video.js": "videojs#^5.10.1",
-    "sass-flex-mixin": "~1.0.3"
+    "sass-flex-mixin": "~1.0.3",
+    "bluebird": "^3.4.0"
   },
   "overrides": {
     "video.js": {
