--- a/theme/package.json
+++ b/theme/package.json
@@ -39,6 +39,7 @@
     "gulp-flatten": "0.1.1",
     "gulp-iconfont": "^6.0.0",
     "gulp-if": "^1.2.5",
+    "gulp-inject": "^4.1.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
