Add Category Posts plugin.

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -61,5 +61,6 @@
         - youtube-channel
         - display-posts-shortcode
         - instagram-feed
+        - category-posts
   roles:
     - wordpress
